removed unused auth endpoint
