# api/swagger/swagger.yaml
@@ -99,36 +99,6 @@ paths:
         default:
           $ref: '#/responses/Error'
 
-  /formLogin:
-    x-swagger-router-controller: auth
-    post:
-      operationId: formLogin
-      security:
-      - Oauth:
-        - open
-      consumes:
-      - application/x-www-form-urlencoded
-      parameters:
-      - in: formData
-        name: username
-        type: string
-        required: true
-      - in: formData
-        name: password
-        type: string
-        required: true
-      responses:
-        200:
-          description: ok
-          schema:
-            type: string
-        302:
-          description: redirect
-          schema:
-            type: string
-        default:
-          $ref: '#/responses/Error'
-
   /register:
     x-swagger-router-controller: auth
     post:
